oop_mro/tests/trybuild/fail_downcast_cross_cast.stderr
error[E0277]: the trait bound `Walker: OopDowncastRefTarget<Mammal>` is not satisfied
  --> tests/trybuild/fail_downcast_cross_cast.rs:23:42
   |
23 |     let _ = kangaroo.as_base::<Walker>().downcast_ref::<Mammal>();
   |                                          ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopDowncastRefTarget<Mammal>` is not implemented for `Walker`
  --> tests/trybuild/fail_downcast_cross_cast.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {
 5 | |         virtual fn speak(&self) -> &'static str {
 6 | |             "animal"
...  |
12 | |     class Walker {
   | |________________^
help: the following other types implement trait `OopDowncastRefTarget<Target>`
  --> tests/trybuild/fail_downcast_cross_cast.rs:3:1
   |
 3 | // oop_class! {
 4 | ||     class Animal {
 5 | ||         virtual fn speak(&self) -> &'static str {
 6 | ||             "animal"
...  ||
12 | ||     class Walker {
   | ||________________^ `Walker` implements `OopDowncastRefTarget<Walker>`
...  |
18 | |      class Kangaroo: Mammal, Walker {}
   | |___________________________________^ `Walker` implements `OopDowncastRefTarget<Kangaroo>`
note: required by a bound in `downcast_ref`
  --> src/lib.rs
   |
   |     fn downcast_ref<Target>(&self) -> Option<&Target>
   |        ------------ required by a bound in this associated function
   |     where
   |         Self: OopDowncastRefTarget<Target>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `OopDowncastRef::downcast_ref`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Walker: OopDynBoxDowncast<Mammal>` is not satisfied
  --> tests/trybuild/fail_downcast_cross_cast.rs:26:20
   |
26 |     let _ = walker.downcast::<dyn AsClass<Mammal>>();
   |                    ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopDynBoxDowncast<Mammal>` is not implemented for `Walker`
      but trait `OopDynBoxDowncast<Kangaroo>` is implemented for it
  --> tests/trybuild/fail_downcast_cross_cast.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {
 5 | |         virtual fn speak(&self) -> &'static str {
 6 | |             "animal"
...  |
18 | |     class Kangaroo: Mammal, Walker {}
   | |__________________________________^
   = help: for that trait implementation, expected `Kangaroo`, found `Mammal`
   = note: required for `dyn oop_mro::AsClass<Walker>` to implement `OopBoxDowncastTarget<dyn oop_mro::AsClass<Mammal>>`
note: required by a bound in `downcast`
  --> src/lib.rs
   |
   |     fn downcast<Target: ?Sized>(self: Box<Self>) -> Result<Box<Target>, Box<Self>>
   |        -------- required by a bound in this associated function
   |     where
   |         Self: OopBoxDowncastTarget<Target>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `OopBoxDowncast::downcast`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
